--- a/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
+++ b/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
@@ -454,6 +454,12 @@ Sets the username.
 [frame="topbot"]
 |===
 ^|Name | Type ^| Description
+|[[autoAcknowledgement]]`@autoAcknowledgement`|`Boolean`|+++
+Sets the auto-acknowledgement.
+ When enabled (default), the messages are automatically acknowledged. If set to <code>false</code>, the messages must
+ be acknowledged explicitly using link, link and
+ link.
++++
 |[[capabilities]]`@capabilities`|`Array of String`|+++
 Sets the list of desired capabilities
  A registry of commonly defined source capabilities and their meanings is maintained at
@@ -4561,6 +4567,12 @@ Set whether Netty pooled buffers are enabled
 [frame="topbot"]
 |===
 ^|Name | Type ^| Description
+|[[cachePreparedStatements]]`@cachePreparedStatements`|`Boolean`|+++
+Set whether prepared statements cache should be enabled.
++++
+|[[collation]]`@collation`|`String`|+++
+Set the collation for the connection.
++++
 |[[connectTimeout]]`@connectTimeout`|`Number (int)`|+++
 Set the connect timeout
 +++
@@ -4628,6 +4640,18 @@ Set the trust options in pfx format
 +++
 |[[port]]`@port`|`Number (int)`|+++
 Specify the port for connecting to the server.
++++
+|[[preparedStatementCacheMaxSize]]`@preparedStatementCacheMaxSize`|`Number (int)`|+++
+Set the maximum number of prepared statements that the connection will cache.
++++
+|[[preparedStatementCacheSqlLimit]]`@preparedStatementCacheSqlLimit`|`Number (int)`|+++
+Set the maximum length of prepared statement SQL string that the connection will cache.
++++
+|[[properties]]`@properties`|`String`|+++
+Set properties for this client, which will be sent to server at the connection start.
++++
+|[[propertys]]`@propertys`|`String`|+++
+Add a property for this client, which will be sent to server at the connection start.
 +++
 |[[proxyOptions]]`@proxyOptions`|`link:dataobjects.html#ProxyOptions[ProxyOptions]`|+++
 Set proxy options for connections via CONNECT proxy (e.g. Squid) or a SOCKS proxy.
@@ -5906,7 +5930,9 @@ Set the store as a buffer
 [frame="topbot"]
 |===
 ^|Name | Type ^| Description
-|[[cachePreparedStatements]]`@cachePreparedStatements`|`Boolean`|-
+|[[cachePreparedStatements]]`@cachePreparedStatements`|`Boolean`|+++
+Set whether prepared statements cache should be enabled.
++++
 |[[connectTimeout]]`@connectTimeout`|`Number (int)`|+++
 Set the connect timeout
 +++
@@ -5975,6 +6001,18 @@ Set the trust options in pfx format
 |[[pipeliningLimit]]`@pipeliningLimit`|`Number (int)`|-
 |[[port]]`@port`|`Number (int)`|+++
 Specify the port for connecting to the server.
++++
+|[[preparedStatementCacheMaxSize]]`@preparedStatementCacheMaxSize`|`Number (int)`|+++
+Set the maximum number of prepared statements that the connection will cache.
++++
+|[[preparedStatementCacheSqlLimit]]`@preparedStatementCacheSqlLimit`|`Number (int)`|+++
+Set the maximum length of prepared statement SQL string that the connection will cache.
++++
+|[[properties]]`@properties`|`String`|+++
+Set properties for this client, which will be sent to server at the connection start.
++++
+|[[propertys]]`@propertys`|`String`|+++
+Add a property for this client, which will be sent to server at the connection start.
 +++
 |[[proxyOptions]]`@proxyOptions`|`link:dataobjects.html#ProxyOptions[ProxyOptions]`|+++
 Set proxy options for connections via CONNECT proxy (e.g. Squid) or a SOCKS proxy.
@@ -7327,6 +7365,9 @@ Set the Shiro auth options type.
 [frame="topbot"]
 |===
 ^|Name | Type ^| Description
+|[[cachePreparedStatements]]`@cachePreparedStatements`|`Boolean`|+++
+Set whether prepared statements cache should be enabled.
++++
 |[[connectTimeout]]`@connectTimeout`|`Number (int)`|+++
 Set the connect timeout
 +++
@@ -7394,6 +7435,18 @@ Set the trust options in pfx format
 +++
 |[[port]]`@port`|`Number (int)`|+++
 Specify the port for connecting to the server.
++++
+|[[preparedStatementCacheMaxSize]]`@preparedStatementCacheMaxSize`|`Number (int)`|+++
+Set the maximum number of prepared statements that the connection will cache.
++++
+|[[preparedStatementCacheSqlLimit]]`@preparedStatementCacheSqlLimit`|`Number (int)`|+++
+Set the maximum length of prepared statement SQL string that the connection will cache.
++++
+|[[properties]]`@properties`|`String`|+++
+Set properties for this client, which will be sent to server at the connection start.
++++
+|[[propertys]]`@propertys`|`String`|+++
+Add a property for this client, which will be sent to server at the connection start.
 +++
 |[[proxyOptions]]`@proxyOptions`|`link:dataobjects.html#ProxyOptions[ProxyOptions]`|+++
 Set proxy options for connections via CONNECT proxy (e.g. Squid) or a SOCKS proxy.
