--- a/vertx-lang-js/src/main/asciidoc/enums.adoc
+++ b/vertx-lang-js/src/main/asciidoc/enums.adoc
@@ -346,6 +346,21 @@ Signals a JSON value.
 +++
 |===
 
+[[KeyType]]
+== KeyType
+
+
+[cols=">25%,75%"]
+[frame="topbot"]
+|===
+^|Name | Description
+|[[SYMMETRIC]]`SYMMETRIC`|-
+|[[PUBLIC]]`PUBLIC`|-
+|[[SECRET]]`SECRET`|-
+|[[PUBSEC]]`PUBSEC`|-
+|[[CERTIFICATE]]`CERTIFICATE`|-
+|===
+
 [[Label]]
 == Label
 
